--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "shuttle-bus-services-server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "14.x"
   },
   "scripts": {
-    "start": "node server",
+    "start": "node server.js",
     "dev": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
